(fix): posts jumping around due to image heights not being applied

--- a/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
@@ -354,8 +354,8 @@
 
   .m-activityContent__media--image {
     img {
-      width: unset;
       max-width: 100%;
+      box-sizing: border-box;
     }
 
     &.m-activityContent__media--extraTallImage,
